correção das vírgulas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <center>
         <h2 class="titulo">Projetos desenvolvidos no módulo 1</h2>
         <br>
-        <p>O principal foco no módulo 1 é ensinar a criança os principais conceitos de programação, como sequência,
+        <p>O principal foco, no módulo 1, é ensinar a criança os principais conceitos de programação, como sequência,
           algoritmo, binários, eventos e variáveis</p>
         <br>
         <div id="modulo1" class="carousel slide carousel-fade">
@@ -83,7 +83,7 @@
       <center>
         <h2 class="titulo">Projetos desenvolvidos no módulo 2</h2>
         <br>
-        <p>O principal foco no módulo 2 é reforçar os conceitos aprendidos no módulo 1, e ensinar sobre condicionais if,
+        <p>O principal foco, no módulo 2, é reforçar os conceitos aprendidos no módulo 1, e ensinar sobre condicionais if,
           loop for, loop while, conectivos "e" e "ou". </p>
         <br>
         <div id="modulo2" class="carousel slide carousel-fade">
@@ -144,8 +144,8 @@
       <center>
         <h2 class="titulo">Projetos desenvolvidos no módulo 3</h2>
         <br>
-        <p>O principal foco no módulo 3 é ensinar os alunos a fazer o básico de desenvolvimento web e desenvolver jogos
-          em HTML5. Nesse percurso vai desenvolver habilidades de HTML (e suas tags), vai estilizar o site utilizando
+        <p>O principal foco, no módulo 3, é ensinar os alunos a fazer o básico de desenvolvimento web e desenvolver jogos
+          em HTML5. Nesse percurso, os alunos vão desenvolver habilidades de HTML (e suas tags), vai estilizar o site utilizando
           CSS (com seus seletores) e Javascript. Além disso, utiliza Bootstrap para criação de sites responsivos e
           Machine Learning (teacheablemachine, mobileNet, poseNet, CocoSSD) para aprender sobre redes neurais, banco de
           dados e IA.</p>
