mudança da cor da seta

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#modulo1" data-bs-slide="prev">
-            <span class="fa-solid fa-chevron-left fa-2xl" style="color: #5a1d5e;" aria-hidden="true"></span>
+            <span class="fa-solid fa-chevron-left fa-2xl" style="color: #a5a5a5;" aria-hidden="true"></span>
 
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#modulo1" data-bs-slide="next">
-            <span class="fa-solid fa-chevron-right fa-2xl" style="color: #5a1d5e;" aria-hidden="true"></span>
+            <span class="fa-solid fa-chevron-right fa-2xl" style="color: #a5a5a5;" aria-hidden="true"></span>
           </button>
         </div>
       </center>
@@ -131,11 +131,11 @@
     
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#modulo2" data-bs-slide="prev">
-            <span class="fa-solid fa-chevron-left fa-2xl" style="color: #5a1d5e;" aria-hidden="true"></span>
+            <span class="fa-solid fa-chevron-left fa-2xl" style="color: #a5a5a5;" aria-hidden="true"></span>
 
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#modulo2" data-bs-slide="next">
-            <span class="fa-solid fa-chevron-right fa-2xl" style="color: #5a1d5e;" aria-hidden="true"></span>
+            <span class="fa-solid fa-chevron-right fa-2xl" style="color: #a5a5a5;" aria-hidden="true"></span>
           </button>
         </div>
       </center>
@@ -194,11 +194,11 @@
           </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#modulo3" data-bs-slide="prev">
-            <span class="fa-solid fa-chevron-left fa-2xl" style="color: #5a1d5e;" aria-hidden="true"></span>
+            <span class="fa-solid fa-chevron-left fa-2xl" style="color: #a5a5a5;" aria-hidden="true"></span>
 
           </button>
           <button class="carousel-control-next" type="button" data-bs-target="#modulo3" data-bs-slide="next">
-            <span class="fa-solid fa-chevron-right fa-2xl" style="color: #5a1d5e;" aria-hidden="true"></span>
+            <span class="fa-solid fa-chevron-right fa-2xl" style="color: #a5a5a5;" aria-hidden="true"></span>
           </button>
         </div>
       </center>
