--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-lg" style="background-color: #C9E8FC;">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="imagens/pp.png" alt="Professoras parceiras" width="150px"></a>
+        <a class="navbar-brand" href="#"><img src="imagens/pp.png" id="logo" alt="Professoras parceiras" width="150px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
