atualização cartão natal

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                       src="imagens/c80.png" class="d-block" alt="Lista de convidados"></a>
           </div>
           <div class="carousel-item">
-              <a href="https://laura260710.github.io/Cart-o-de-Natal-/natal.gif" target="_blank"><img
+              <a href="https://laura260710.github.io/Cart-o-de-Natal-/" target="_blank"><img
                       src="imagens/c86.png" class="d-block" alt="Cartão de Feliz Natal"></a>
           </div>
           <div class="carousel-item">
